# DiveVisionApp

./: .gitignore  README.md  pipeline_test.ipynb  pyproject.toml
notebooks/: pipeline_test.ipynb  test.ipynb
src/: caption_frames.py  chunk_video.py  constants.py  extract_frames.py  ingestion.py  merge_registries.py  utils.py
src/ingestion_pipeline/: caption_frames.py  chunk_video.py  cli.py  extract_frames.py  ingestion.py  merge_registries.py  vector_store.py
