[project]
name = "DiveVisionApp"
version = "0.1.0"
description = "App to identify scenes in scuba diving footage"
authors = [
    {name = "Rhianna Leslie"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0,<8.0.0",
    "opencv-python>=4.13.0.92,<5.0.0.0",
    "exifread>=3.5.1,<4.0.0",
    "hachoir>=3.3.0,<4.0.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3,<3.0.0"
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
